<!-- <?xml version="1.0"?> -->
<package>
  <name>test_move</name>
  <version>2.2.5</version>
  <description>Code for Turtlebot Project</description>

  <maintainer email="brianna.hadiwijaya@student.uts.edu.au">Brianna Hadiwijaya</maintainer>

  <license>MIT</license>

  <author email="brianna.hadiwijaya@student.uts.edu.au">Brianna Hadiwijaya</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>turtlebot_bringup</run_depend>

  <!-- NEWLY ADDED
  <build_depend>opencv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>opencv</run_depend>
  <run_depend>cv_bridge</run_depend> -->


</package>